Fix blank space on mobile modals issue

--- a/src/assets/styles/components/_modal.scss
+++ b/src/assets/styles/components/_modal.scss
@@ -1,10 +1,6 @@
 // Modals //
 @import '../variables';
 
-.modal-content {
-  background-color: unset;
-}
-
 #AccountModal {
   .modal-dialog-scrollable .modal-content {
     max-height: 100vh;
@@ -41,7 +37,7 @@
     padding: 0 14px 14px 14px;
   }
   &-dialog {
-    margin: .5rem;
+    margin: 0;
     &-mobile {
       margin: 0;
     }
@@ -52,7 +48,6 @@
   #AuthModal .modal-dialog {
     max-width: 564px;
   }
-
   #ConnectionModal .modal-dialog {
     max-width: 564px;
   }
@@ -86,4 +81,3 @@
     opacity: .8;
   }
 }
-
